--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - docker pull antora/antora
   - docker run --rm --privileged -v $(pwd):/site -w="/site" antora/antora playbook.yml
   - docker ps -a
-  - ls -la /site
-  - ls -la /site/documentation
+  - ls -la .
+  - ls -la ./documentation
 
