--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
   - docker pull antora/antora
   - pwd
   - ls -la
-  - docker run --privileged -v $(pwd):/site -w="/site" antora/antora playbook.yml
+  - docker run --rm --privileged -v $(pwd):/site -w="/site" antora/antora playbook.yml
   - docker ps -a
   - pwd
   - ls -la
+  - ls -la ./_site
+  - la -la ./_site/documentation
