--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ before_install:
   - docker pull antora/antora
   - pwd
   - ls -la
-  - docker run --rm --privileged --user=$UID:$GID -v $(pwd):/site -w="/site" antora/antora playbook.yml
+  - docker run --rm --privileged --user=$UID:$GID -v $(pwd):/site -w="/site" antora/antora --cache-dir=./_antora_cache playbook.yml
   - docker ps -a
   - pwd
   - ls -la
   - ls -la ./_site
   - ls -la ./_site/documentation
+  - ls -la ./_antora_cache
